2005-12-31  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Patch sent by Juan Luis Baptiste <juan.baptiste@kdemail.net>, adds
	support for ubuntu 5.10 and 6.04, Yoper 2.2, Ark, Fedora Core 4 
	and latest Mandrake/Mandriva for the network tool.

2005-11-28  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.4.1

2005-11-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* replace.pl.in (gst_replace_confd_net_re): do not put extra spaces in
	configuration, it may break the fragile gentoo's configuration parser.
	Hopefully closes #317841

2005-11-21  Ken VanDine  <ken@vandine.org>

	* disks-conf.in, network-conf.in, network.pl.in, platform.pl.in,
	service.pl.in, services-conf.in, shares-conf.in, time-conf.in,
	users-conf.in: Specifix Linux is now rPath linux

2005-11-21  Scott J. Harmon  <harmon@ksu.edu>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in: Added
	support for Slackware 10.2.0

2005-10-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: combined and modified patch from Christian Meyer
	<chrisime@gnome.org> and Florian Schricker <fschricker@web.de> for 
	supporting new network configuration sintax in both Vidalinux and 
	Gentoo. Fixes bugs #317841, #311946 and #153490
	* parse.pl.in, replace.pl.in: added functions to parse/replace files
	like gentoo's /etc/conf.d/net
	* file.pl.in (gst_file_copy): make copy not fail miserably if the orig
	file doesn't exist

2005-09-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: Fixed WEP key detection on both slackware and gentoo.
	Closes GNOME bug #316732

2005-09-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.4.0

2005-08-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in (xml_parse_statichost): made regexp for parsing IP
	addresses more liberal to avoid problems

2005-08-27  Carlos Garnacho Parro  <carlosg@gnome.org>
