@@ -55,7 +55,7 @@ $version = "@VERSION@";
               "pld-1.0", "pld-1.1", "pld-1.99",
               "slackware-9.1.0", "slackware-10.0.0", "slackware-10.1.0", "slackware-10.2.0",
               "vine-3.0", "vine-3.1",
-              "gentoo", "vlos-1.2", "freebsd-5", "freebsd-6", "suse-9.0", "suse-9.1");
+              "gentoo", "archlinux", "vlos-1.2", "freebsd-5", "freebsd-6", "suse-9.0", "suse-9.1");
 
 $description =<<"end_of_description;";
        Configures which services are to be started or stopped at which runlevels
