@@ -78,7 +78,7 @@ $version = "@VERSION@";
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0", "slackware-10.0.0", "slackware-10.1.0", "slackware-10.2.0",
               "freebsd-4", "freebsd-5", "freebsd-6",
               "gentoo", "vlos-1.2",
-              "archlinux-0.7",
+              "archlinux",
               "pld-1.0", "pld-1.1", "pld-1.99", "fedora-1", "fedora-2", "fedora-3", "rpath", "vine-3.0", "vine-3.1");
 
 $description =<<"end_of_description;";
@@ -366,7 +366,7 @@ my $logindefs_dist_map = {
   'vine-3.1'        => $rh_logindefs_defaults,
   'gentoo'	        => $gentoo_logindefs_defaults,
   'vlos-1.2'	      => $gentoo_logindefs_defaults,
-  'archlinux-0.7'   => $gentoo_logindefs_defaults,
+  'archlinux'       => $gentoo_logindefs_defaults,
   'slackware-9.1.0' => $gentoo_logindefs_defaults,
   'slackware-10.0.0' => $gentoo_logindefs_defaults,
   'slackware-10.1.0' => $gentoo_logindefs_defaults,
